# 3mtt-learner-reminder

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  analysis.ipynb  config.py  log.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: scheduler.yml
data_processing/: downloader.py  filters.py
email_sender/: mailjet_client.py  templates.py
tests/: conftest.py  test_main.py
tests/integration/: test_downloader_async.py  test_filters_async.py
tests/unit/: test_downloader_unit.py  test_filters_unit.py  test_mailjet_client.py
utils/: batching.py  retry.py
